force-app/main/default/objects/Book_Tag__c/Book_Tag__c.object-meta.xml
<CustomObject>
    <description>A junction object between Book and Tag objects.</description>
    <label>Book Tag</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Book Tag Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>