force-app/main/default/objects/Book_Tag__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <formula>Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Title</label>
    <type>Text</type>
</CustomField>